--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "db:build": "node ./db/init_db",
     "start:dev": "concurrently \"npm run client:build\" \"npm run client:dev\" \"npm run server:dev\"",
     "start": "node index.js",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "db:hone": "node ./db/hone_seed"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fast-csv": "^4.3.6",
     "jest": "^24.9.0",
     "morgan": "^1.10.0",
     "pg": "^8.2.1",
