removed seed file from yaml

--- a/.github/workflows/validate-pull-request.yaml
+++ b/.github/workflows/validate-pull-request.yaml
@@ -2,12 +2,12 @@ name: Validate Pull Request
 on:
   pull_request:
     branches:
-      - 'main'
+      - "main"
     types:
-      - 'opened'
-      - 'edited'
+      - "opened"
+      - "edited"
       # triggered by new commits to an existing PR
-      - 'synchronize'
+      - "synchronize"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,7 +32,5 @@ jobs:
           fetch-depth: 0
       - name: Install Dependencies
         run: npm install
-      - name: Seed Database
-        run: npm run db:build
       # - name: Test Suite
       #   run: npm run test
