--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "client:dev": "react-scripts start",
     "client:build": "react-scripts build",
     "server:dev": "nodemon index.js",
-    "db:build": "node ./db/init_db",
-    "db:build2": "node ./db/init_expected_cost",
+    "db:build-base": "node ./db/init_db",
+    "db:build-expected-cost": "node ./db/init_expected_cost",
+    "db:init": "npm run db:build-base && npm run db:build-expected-cost",
     "start:dev": "concurrently \"npm run client:build\" \"npm run client:dev\" \"npm run server:dev\"",
     "start": "node index.js",
     "test": "jest --runInBand"
